# mdinfo_macos

./: .bumpversion.cfg  CHANGELOG.md  README.md  README.rst  README_DEV.md  pyproject.toml
mdinfo_macos/: __init__.py  _version.py  help.py  mdinfo_finder.py  mdinfo_mac.py
tests/: test_macos.py
